# CppStarter

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  macos.yml  ubuntu.yml  windows.yml
cmake/: CodeCoverage.cmake
documentation/: CMakeLists.txt
include/greeter/: greeter.hpp
src/: greeter.cpp
standalone/: CMakeLists.txt
standalone/src/: main.cpp
test/: CMakeLists.txt
test/src/: greeter.cpp
